syntax = "proto3";

package proto;

import "proto/service.proto";

// Minimal encoding of a peer
message Peer {
  // public key used for signing
  bytes public_key = 1;
  // string form of the peers ID
  string ip = 2;
  // services supported by the peer
  ServiceMap services = 3;
}
