syntax = "proto3";

package proto;

// Mapping between a service ID and its tuple network_address
// e.g., map[autopeering:&{tcp, 198.51.100.1:80}]
message ServiceMap {
  map<string, NetworkAddress> map = 1;
}
  
// The service type (e.g., tcp, upd) and the address (e.g., 198.51.100.1:80)
message NetworkAddress {
  string network = 1;
  uint32 port = 2;
}